ISSUP-4949 add download licenseKey zip API
